# fondat

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
docs/: Hello_World.md  README.md  quick_start.md  what_is_roax.md
fondat/: __init__.py  _schema.py  annotation.py  asgi.py  cache.py  codec.py  context.py  csv.py  data.py  enum.py  error.py  file.py  http.py  lazy.py  memory.py  monitor.py  monitoring.py  openapi.py  pagination.py  paging.py  patch.py  resource.py  schema.py  security.py  sql.py  sqlite.py  static.py  stream.py  string.py  types.py  typing.py  validate.py  validation.py  wsgi.py
roax/: __init__.py  _schema.py  cli.py  context.py  db.py  file.py  lazy.py  memory.py  monitor.py  openapi.py  patch.py  resource.py  schema.py  security.py  sql.py  sqlite.py  static.py  wsgi.py
src/roax/: __init__.py  _schema.py  _version.py  cache.py  cli.py  context.py  file.py  geo.py  memory.py  monitor.py  openapi.py  patch.py  redis.py  resource.py  schema.py  security.py  static.py  wsgi.py
tests/: test_annotation.py  test_asgi.py  test_cache.py  test_cli.py  test_codec.py  test_context.py  test_csv.py  test_data.py  test_db.py  test_error.py  test_file.py  test_geo.py  test_http.py  test_lazy.py  test_memory.py  test_monitor.py  test_monitoring.py  test_openapi.py  test_pagination.py  test_paging.py  test_patch.py  test_redis.py  test_resource.py  test_schema.py  test_security.py  test_sql.py  test_sqlite.py  test_static.py  test_stream.py  test_string.py  test_types.py  test_validate.py  test_validation.py  test_wsgi.py
