[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 96
target-version = ['py310']

[tool.poetry]
name = "fondat"
version = "4.0a11"
description = "A foundation for resource-oriented backend applications."
readme = "README.md"
authors = ["fondat authors"]
homepage = "https://github.com/fondat/fondat/"
documentation = "https://github.com/fondat/fondat/tree/main/docs"
license = "MIT"
keywords = ["asgi", "foundation", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.17"
iso8601 = "^1.0"
multidict = "^6.0"
wrapt = "^1.14"

[tool.poetry.dev-dependencies]
black = "^22.8"
isort = "^5.10"
pre-commit = "^2.20"
pytest = "^7.1"
pytest-asyncio = "^0.19"
pytest-cov = "^3.0"

[tool.isort]
profile = "black"
lexicographical = true
lines_after_imports = 2
lines_between_types = 1
line_length = 96
no_sections = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
