[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 96
target-version = ['py310']

[tool.poetry]
name = "fondat"
version = "4.1.6"
description = "A foundation for resource-oriented backend applications."
readme = "README.md"
authors = ["fondat authors"]
homepage = "https://github.com/fondat/fondat/"
documentation = "https://github.com/fondat/fondat/tree/main/docs"
license = "MIT"
keywords = ["asgi", "foundation", "resource", "openapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19"
iso8601 = "^2.0"
multidict = "^6.0"
wrapt = "^1.15"

[tool.poetry.dev-dependencies]
black = "^23.7"
isort = "^5.12"
pre-commit = "^3.3"
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"

[tool.isort]
profile = "black"
lexicographical = true
lines_after_imports = 2
lines_between_types = 1
line_length = 96
no_sections = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
